<resources>
    <string name="xuanzezhanghu">Select Account</string>
    <string name="queding">OK</string>
    <string name="ninmuqiandeyouxiangshi">Your current email address is %s and you would like to update it to ?</string>
    <string name="qingshuruyouxiang">Please enter your email address</string>
    <string name="fasongyanzhengma">Send verification code</string>
    <string name="qingshuruxinyouxiang">Please enter a new email address</string>
    <string name="yanzhengmayifasongzhi">The verification code has been sent to</string>
    <string name="qingshuruyouxiangyanzhengma">Please enter the box verification code</string>
    <string name="xiayibu">Next step</string>
    <string name="quanziid">Circle ID:%s</string>
    <string name="jianjie">Introduction:</string>
    <string name="wenzhang">Articles</string>
    <string name="gongpian">Total%s Articles</string>
    <string name="jiemu">Program</string>
    <string name="gongge">Total%s</string>
    <string name="gongmingchengyuan">Total%s members</string>
    <string name="yaoqing">Invitation</string>
    <string name="xinshenqingjiaru">New application to join</string>
    <string name="shezhiqunjiarufangshi">Set up group joining method</string>
    <string name="kaitongvip">Open VIP</string>
    <string name="xiaoximiandarao">No interruptions on messages</string>
    <string name="jinzhichengyuanfayan">Ban members from speaking</string>
    <string name="guanliheimingdan">Manage Blacklist</string>
    <string name="qingkongliaotianneirong">Empty chat content</string>
    <string name="tuichuquanzi">Quit the circle</string>
    <string name="shenqingjiaru">Apply for membership</string>
    <string name="fengmianbeijing">Cover Background</string>
    <string name="shangchuanquanzitouxiang">Upload Circle Avatar</string>
    <string name="quanzimingzi">Circle Name</string>
    <string name="shuruquanzimingzi">Enter circle name</string>
    <string name="quanzijianjie">Circle Profile</string>
    <string name="shuruquanzijianjie">Enter circle description</string>
    <string name="quedingchuangjian">Confirm creation</string>
    <string name="daili">Proxy</string>
    <string name="chengweidaili">Become an agent</string>
    <string name="shenhezhong">Reviewing</string>
    <string name="quanbuyongjinusdt">Full commission (USDT)</string>
    <string name="xinzengkehushuren">Number of new clients (people)</string>
    <string name="zuorixinzeng">New yesterday</string>
    <string name="jinrixinzeng">Today\'s new</string>
    <string name="fanyongjineusdt">Commission amount (USDT)</string>
    <string name="kehujiaoyieusdt">Customer transaction amount (USDT)</string>
    <string name="weilebaozhengnidezhanghaoanquanqingyanzhengshenfen">In order to ensure the safety of your account, please verify your identity</string>
    <string name="xiaoyingyong">Small application</string>
    <string name="gonggao">Announcement</string>
    <string name="gengduo">More</string>
    <string name="davpaihangbang">Gold Agency Ranking</string>
    <string name="qishilijianggongshiwomenjinghouweininjiamian">The real power will be announced, we are waiting for you to be crowned</string>
    <string name="btc">BTC/USDT</string>
    <string name="greyvalue">= $ 274050.62</string>
    <string name="redvalue">43500.09</string>
    <string name="dav">Gold Machine</string>
    <string name="otc">OTC</string>
    <string name="shurushenfenzhengxinxi">Enter document information</string>
    <string name="qingshurushenfenzhengxingming">Please enter the name of the certificate</string>
    <string name="qingshurushenfenzhenghao">Please enter your ID number</string>
    <string name="shangchuanshenfenzhengzhaopian">Upload a photo of your ID</string>
    <string name="paisherenxiangye">Select front</string>
    <string name="chakanshili">View Example</string>
    <string name="paisheguohuiye">Select the reverse side</string>
    <string name="paisheshouchishenfenzheng">Take a picture of your handheld ID card</string>
    <string name="zhucizhengjingongtokapingtairenzhengshiyong">**Note: This ID card is for TOKA platform authentication use only, xxxx year xx month xx day</string>
    <string name="shangchuandezhengjianzhaojiangjinxingfangdaoshuiyinchuli">- The uploaded ID photo will be processed with an anti-theft watermark, and we strictly follow the laws and regulations to protect your personal privacy.</string>
    <string name="wancheng">Complete</string>
    <string name="denglu">Login</string>
    <string name="huanyinglaitfg">Welcome to the procoin trading platform</string>
    <string name="qingshurumima">Please enter your password</string>
    <string name="qingshuruyanzhengma">Please enter your verification code</string>
    <string name="huoquyanzhengma">Get the verification code</string>
    <string name="wangjilezhaohuimima">Forgotten? Retrieve your password</string>
    <string name="chongzhimima">Reset Password</string>
    <string name="zhongguo">Hong Kong</string>
    <string name="miguo">Unite State</string>
    <string name="qingshurushoujihaoma">Please enter your cell phone number</string>
    <string name="mimabixushibashiliushuzi">Password must be a combination of 8\-16 digits and letters</string>
    <string name="qingzaicishurumima">Please enter your password again</string>
    <string name="zhuce">Register</string>
    <string name="qingshuruyaoqingmabitian">Please enter the invitation code (required)</string>
    <string name="qingshuruyaoqingmaxuantian">Please enter the invitation code (optional)</string>
    <string name="register_email">Mailbox Registration</string>
    <string name="shuruyanzhengma">Enter verification code</string>
    <string name="qinghuoquduanxinyanzhengma">Please obtain the SMS verification code</string>
    <string name="wanchengyanzheng">Complete the verification</string>
    <string name="kuohaoid">(ID:%s</string>
    <string name="tayucedapanpaiming">TA Forecast Ranking</string>
    <string name="chuchumaolu">young and inexperienced</string>
    <string name="shenglv">Winning percentage</string>
    <string name="yucezhanji">Prediction</string>
    <string name="tajiarudequanzi">Circles that TA joined</string>
    <string name="gongxichenggongfaxingtoka">Congratulations to %s successful release of TOKA</string>
    <string name="faxingliang">Release volume:</string>
    <string name="tokayongtu">TOKA Usage:</string>
    <string name="fenxiangwodetoka">Share my TOKA</string>
    <string name="create_toka_warning">The above terms and conditions are stored on the blockchain and are open and transparent. In case of disputes, TOKA holders can submit the content data deposited with blockchain technology to various local Internet courts and arbitration committees.</string>
    <string name="create_toka_warning2">Attachment: \ n On September 7, 2018, the Chinese Supreme People\'s Court announced and implemented the "Provisions on Several Issues on Internet Trial Cases". The "Provisions" takes relevant provisions for the Internet court\'s trial of the case, the scope of the case, the construction of the Internet litigation platform, the online processing of prosecution materials, the exchange of online evidence, the electronic lawsuit and the electronic evidence materials. Among them, Article 11 stipulates that: "The electronic data submitted by the parties through electronic signatures, trusted timestamps, hash checks, blockchain and other evidence collection, fixing and tampering are used Certificate platform certification can prove its authenticity, and the Internet court should confirm. "</string>
    <string name="register_phone">Mobile Phone Registration</string>
    <string name="xuefenxfmingxi">Credit (XF) details</string>
    <string name="kuaijiegoumai">Quick Purchase</string>
    <string name="tixian">Withdrawal</string>
    <string name="lishi">History</string>
    <string name="woxiang">I want to</string>
    <string name="goumai">Buy</string>
    <string name="chushou">Sell</string>
    <string name="jiage">Price</string>
    <string name="jiage_">Price:</string>
    <string name="shurujiage">Enter price</string>
    <string name="dangqiangoumaizuigaojia">The highest price for the current purchase</string>
    <string name="tianru">Fill in</string>
    <string name="shuliang">Quantity</string>
    <string name="shurushuliang">Enter the quantity</string>
    <string name="chushouusdtshixitongjianghuicongyuezhanghuzhongdongjiegaibufenzijin">When selling USDT, the system will freeze the funds from the balance account.</string>
    <string name="xiane">Limit</string>
    <string name="zuixiao">Min</string>
    <string name="zuida">Maximum</string>
    <string name="fangshikeduoxuan">Method (multiple options available)</string>
    <string name="liuyanneirong">Message</string>
    <string name="qingxiexianinxiangduimaijiashuodehua">Please write down what you want to say to the seller/buyer! (Limit 140 characters)</string>
    <string name="quxiao">Cancellation</string>
    <string name="yinglifencheng">Profit Sharing:</string>
    <string name="putongpingcang">Normal Close</string>
    <string name="yidangqianshijiachengjiao">(Sold at current market price)</string>
    <string name="qingshurupingcangshoushu">Please enter the number of lots to be closed</string>
    <string name="shou">lots</string>
    <string name="shijian">Time</string>
    <string name="zhifudailifei">Payment of agency fee</string>
    <string name="dailifeiwei">Is the brokerage fee %sUSDT, confirm payment?</string>
    <string name="gendanjiaoyijilu">Order History</string>
    <string name="gendanleixing">Order Type</string>
    <string name="kuisunbutie">Loss allowance:</string>
    <string name="zuidijine">Minimum amount</string>
    <string name="daoqiri">Expiration Time</string>
    <string name="chicangshoushu">Number of lots</string>
    <string name="gendanyinglie">Profit amount</string>
    <string name="shiyigensuigaohoudeyonghu">Explanation: The total profit and loss of users who follow the master in the last 30 days.</string>
    <string name="yinglinengli">Profitability</string>
    <string name="shiyigaoshouzuijinsanshitian">Explanation: Average of the average transaction yields per transaction in the last 30 days. The larger the value, the stronger the personal profitability.</string>
    <string name="gendanshouyilv">Follow Profitability</string>
    <string name="shiyigensuigaoshoudeyonghuzuijin">Explanation: Following the experts who follow the master in the past 30 days, the average return of each transaction. The larger the value, the better the user\'s user income.</string>
    <string name="gendanshenglv">Winning Rate</string>
    <string name="shiyigensuigaoshouyinglidejilv">Explanation: Following the chance of profitability of the master. The larger the value, the higher the possibility of profitability to make a single profit.</string>
    <string name="renqizhishu">Popularity Index</string>
    <string name="shiyigaoshouzuijinrenqi">Explanation: In the last 30 days, the master has been with the single person in the last 30 days. The larger the value, the more the followers, the higher the popularity.</string>
    <string name="tishi">Tip</string>
    <string name="cancle">Cancel</string>
    <string name="zuigaobeishu">Maximum Multiplier:</string>
    <string name="quanqiuzhishujiaoyijilu">Global Futures Trading History</string>
    <string name="heyuejiaoyijilu">Contract Transaction History</string>
    <string name="bibijiaoyijilu">Currency Trading History</string>
    <string name="duihuanyaoqingma">Redeem Invitation Codes</string>
    <string name="qingshuruduihuanshuliang">Please enter the redemption quantity</string>
    <string name="xiaohaotoken">TFU consumption:</string>
    <string name="keduihuanshuliang">Redeemable Qty:</string>
    <string name="qingshurushengoushuliang">Please enter the purchase quantity</string>
    <string name="quaneshengou">Full purchase</string>
</resources>