<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="20dip"
    android:paddingRight="20dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_marginTop="20dip">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/putongpingcang"
            android:textColor="@color/c1d3155"
            android:textSize="@dimen/font_size_18"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/yidangqianshijiachengjiao"
            android:textColor="@color/c661d3155"
            android:textSize="@dimen/font_size_12" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/etAmount"
            android:layout_width="0dip"
            android:layout_height="45dip"
            android:layout_weight="1"
            android:background="@drawable/xml_et_bg"
            android:gravity="left|center_vertical"
            android:hint="@string/qingshurupingcangshoushu"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/c6175ae"
            android:textColorHint="#c8c8c8"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shou"
            android:textColor="@color/c1d3155"
            android:textSize="@dimen/font_size_14" />

    </LinearLayout>
    <TextView
        android:id="@+id/tvHoldAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:text="@string/chicangshoushu"
        android:textColor="@color/c661d3155"
        android:textSize="@dimen/font_size_12"
        android:layout_marginTop="10dip"/>

    <TextView
        style="@style/btn_style_4"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="20dip"
        android:text="@string/queding" />


</LinearLayout>