<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border_white_10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duihuanyaoqingma"
        android:paddingTop="20dp"
        android:textColor="@color/c333333"
        android:textSize="16dp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/et_shuliang"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:hint="@string/qingshuruduihuanshuliang"
        android:paddingHorizontal="10dp"
        android:inputType="number"
        android:textSize="15dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/border_gray_5dp_1line"/>

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keduihuanshuliang"
        android:textColor="@color/c333333"
        android:textSize="14dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="30dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancle"
            android:textColor="@color/c333333"
            android:textSize="16dp"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"/>
        <TextView
            android:id="@+id/txt_sure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/queding"
            android:textColor="@color/c333333"
            android:textSize="16dp"
            android:gravity="center"
            />
    </LinearLayout>
</LinearLayout>