<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="25dp"
    android:background="@drawable/border_white_15dp">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#1aaba8"
        android:textSize="16sp"
        android:text="@string/zhifudailifei"/>
    <TextView
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="30dp"
        android:text="@string/dailifeiwei"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="#333333"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_queding"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/queding"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/border_blue_5dp"/>
        <View
            android:layout_width="30dp"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/txt_quxiao"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/quxiao"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/border_blue_5dp"/>
    </LinearLayout>
</LinearLayout>