<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/border_white_10dp">
    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tishi"
        android:textColor="@color/c333333"
        android:textSize="16dp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal"
        android:background="@drawable/border_gray2_5dp">
        <EditText
            android:id="@+id/et_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:hint="@string/qingshurushengoushuliang"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:paddingHorizontal="15dp"
            android:inputType="number"
            android:maxLines="1"
            android:background="@null"/>
        <TextView
            android:id="@+id/txt_quaneshengou"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:gravity="center"
            android:textColor="@color/switch_on_bg"
            android:text="@string/quaneshengou"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/txt_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cancle"
            android:textColor="@color/switch_on_bg"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/txt_sure"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="15dp"
            android:text="@string/queding"
            android:textColor="@color/switch_on_bg"
            android:textSize="16dp"
            android:gravity="center"
            />
    </LinearLayout>
</LinearLayout>