<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="7dp"
    android:padding="15dp"
    android:id="@+id/ll_all"
    android:background="@drawable/border_white_10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/yuan_nosel"/>
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/c333333"
            android:textSize="16dp"
            android:text="@string/gendanleixing"
            android:layout_marginStart="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="7dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_yinglifencheng"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@color/c666666"
            android:textSize="14dp"
            android:text="@string/yinglifencheng"
             />
        <TextView
            android:id="@+id/txt_kuisunbutie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/c666666"
            android:textSize="14dp"
            android:text="@string/kuisunbutie"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="7dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_zuigaobeishu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@color/c666666"
            android:textSize="14dp"
            android:text="@string/zuigaobeishu"
            />
        <TextView
            android:id="@+id/txt_huafeitoken"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/c666666"
            android:textSize="14dp"
            android:text="@string/xiaohaotoken"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@color/c666666"
            android:textSize="14dp"
            android:text="@string/zuidijine"
            />

        <TextView
            android:id="@+id/txt_daoqishijian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/c666666"
            android:textSize="14dp"
            android:text="@string/daoqiri"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/c666666"
            android:textSize="14dp"
            android:text="@string/shijian"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_jine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@color/c333333"
            android:textSize="14dp"
            android:text="1000USDT"
            />
        <TextView
            android:id="@+id/txt_daoqiri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/c333333"
            android:textSize="14dp"
            android:text="2021.11.28"
            />
        <TextView
            android:id="@+id/txt_shijian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/c333333"
            android:textSize="14dp"
            android:text="一个月"
            />

    </LinearLayout>
</LinearLayout>